--- a/templates/index.html
+++ b/templates/index.html
@@ -24,8 +24,8 @@ body {
     height: calc(100vh - 160px); /* Adjust height to leave space for the input form */
     max-height: 75vh;
     overflow-y: scroll; /* Enable scrolling */
-    padding: 10px;
-    margin-top: 80px; /* this is to ensure chat box below the h1 tag man */
+    padding: 10px 10px 5px 5px;
+    margin-top: 50px; /* this is to ensure chat box below the h1 tag man */
     width: 90%;
     max-width: 1200px;
     margin-bottom: 10px; /* Reduce margin-bottom */
@@ -93,7 +93,7 @@ form {
         max-width: none;
         font-size: 0.9rem;
         height: calc(100vh - 160px); /* Adjust height for mobile to leave space for the input form */
-        margin-top: 100px; /* Add margin-top to prevent overlap */
+        margin-top: 50px; /* Add margin-top to prevent overlap */
     }
     form {
         width: 100%; /* Ensure form width fits screen */
