--- a/templates/index.html
+++ b/templates/index.html
@@ -6,187 +6,189 @@
     <link rel="icon" href="static/images/Yggdrasil.png" type="image/png">
     <title>I am GROOT</title>
     <style>
-       html { overflow-y: hidden; }
-body {
-    font-family: 'Times New Roman', Times, serif;
-   /* background-color: black;*/
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: white;
-    margin: 0;
-    padding-bottom: 60px;
-    overflow: hidden;
-}
-#chatbox {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    height: calc(100vh - 160px); /* Adjust height to leave space for the input form */
-    max-height: 75vh;
-    overflow-y: scroll; /* Enable scrolling */
-    padding: 10px;
-    margin-top: 50px; /* this is to ensure chat box below the h1 tag man */
-    width: 90%;
-    max-width: 1200px;
-    margin-bottom: 5px; /* Reduce margin-bottom */
-    padding-bottom: 5px; /* Reduce padding-bottom */
-    backdrop-filter: blur(0.9px);
-}
-#chatbox::-webkit-scrollbar {
-    display: none; /* Hide scrollbar for WebKit browsers (Chrome, Safari) */
-}
-#chatbox {
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
-}
-form {
-    align-items: center;
-    justify-content: end;
-    display: flex;
-    position: fixed;
-    bottom: 5px;
-    width: 50%; /* Adjust width for mobile */
-    background: transparent;
-    z-index: 1000; /* Ensure form is above chatbox */
-}
-#userInput {
-    background-color: rgb(49, 46, 53);   
-    font-family: 'Times New Roman', Times, serif;
-    width: 100%;
-    font-size: larger;
-    color: white;
-    height: 30px;
-    flex: 1;
-    border: none;
-    border-radius: 10px;
-    padding: 10px;
-    outline: none;
-    transition: border-color 0.5s ease-out;
-}
-#userInput::placeholder {
-    color: white;
-    opacity: 0.5;
-}
-#userInput:focus {
-    border-color: #fff700;
-}
-#button {
-  padding: 10px 30px ;
-  border: none;
-  outline: none;
-  color: #FFF;
-  cursor: pointer;
-  position: absolute;
-  border-radius: 10px;
-  z-index: 1000;
-  background-color: rgb(49, 46, 53);
-  font-family:'Franklin Gothic Medium' ;
-  font-size: 15px;
-}
-#button::after {
-  content: "";
-  z-index: 0;
-  position: relative;
-  width: 100%;
-  height: 100%;
-  background-color: #333;
-  left: 0;
-  top: 0;
-  border-radius: 10px;
-}
-/* glow */
-#button::before {
-  content: "";
-  background: linear-gradient( 45deg,#FF0000, #FF7300, #FFFB00, #48FF00, #00FFD5, #002BFF, #FF00C8, #FF0000);
-  position: absolute;
-  top: -2px;
-  left: -5px;
-  background-size: 600%;
-  z-index: -1;
-  width: calc(100% + 4px);
-  height:  calc(100% + 4px);
-  filter: blur(0px);
-  animation: glowing 20s linear infinite;
-  transition: all 0.5s ease-in-out;
-  border-radius: 10px;
-  opacity: 0;/*to prevent from diplaying colors of buttons*/
-}
-@keyframes glowing {
-  0% {background-position: 0 0;}
-  50% {background-position: 500% 0;}
-  100% {background-position: 0 0;}
-}
-#button:hover::before {
-  opacity: 1;
-}
-#button:active:after {
-  background: transparent;
-}
-#button:active {
-  color: #000;
-  font-weight: bold;
-}
-@media (max-width: 600px) {
-    h1 {
-        font-family: verdana;
-        font-weight: bold;
-        font-size: 1.5rem;
-    }
-    #chatbox {
-        /* width: 95%;
-        max-width: none;
-        font-size: 0.9rem;
-        height: calc(100vh - 160px); /* Adjust height for mobile to leave space for the input form 
-        margin-top: 50px; Add margin-top to prevent overlap */
-     
-        width: 95%;
-        max-width: none;
-        font-size: 0.9rem;
-        height: calc(100vh - 160px); /* Adjust height for mobile to leave space for the input form */
-        margin-top: 80px; /* Add margin-top to prevent overlap */
-    }
-    form {
-        width: 100%; /* Ensure form width fits screen */
-        padding: 5px; /* Reduce padding on mobile */
-    }
-    #userInput {
-        font-size: medium;
-    }
-    #button {
-        padding: 10 10px;
-        font-size: 1.0rem;
-    }
-}
-   #h1{
+        html { overflow-y: hidden; }
+        body {
+            background-color: #000;
+            font-family: 'Times New Roman', Times, serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            color: white;
+            margin: 0;
+            padding-bottom: 60px;
+            overflow: hidden;
+            position: relative;
+        }
+
+        #chatbox {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            height: calc(100vh - 160px); /* Adjust height to leave space for the input form */
+            max-height: 75vh;
+            overflow-y: scroll; /* Enable scrolling */
+            padding: 10px;
+            margin-top: 50px;
+            width: 90%;
+            max-width: 1200px;
+            margin-bottom: 5px; /* Reduce margin-bottom */
+            padding-bottom: 5px; /* Reduce padding-bottom */
+            backdrop-filter: blur(0.9px);
+        }
+        #chatbox::-webkit-scrollbar {
+            display: none; /* Hide scrollbar for WebKit browsers (Chrome, Safari) */
+        }
+        #chatbox {
+            -ms-overflow-style: none;  /* IE and Edge */
+            scrollbar-width: none;  /* Firefox */
+        }
+
+        form {
+            display: flex;
+            align-items: center;
+            justify-content: end;
+            position: fixed;
+            bottom: 5px;
+            width: 50%; /* Adjust width for larger screens */
+            background: transparent;
+            z-index: 1000; /* Ensure form is above chatbox */
+        }
+
+        #userInput {
+            background-color: rgb(49, 46, 53);   
+            font-family: 'Times New Roman', Times, serif;
+            width: 100%;
+            font-size: larger;
+            color: white;
+            height: 30px;
+            flex: 1;
+            border: none;
+            border-radius: 10px;
+            padding: 10px;
+            outline: none;
+            transition: border-color 0.5s ease-out;
+        }
+        #userInput::placeholder {
+            color: white;
+            opacity: 0.5;
+        }
+        #userInput:focus {
+            border-color: #fff700;
+        }
+
+        #button {
+            padding: 10px 30px ;
+            border: none;
+            outline: none;
+            color: #FFF;
+            cursor: pointer;
+            position: absolute;
+            border-radius: 10px;
+            z-index: 1000;
+            background-color: rgb(49, 46, 53);
+            font-family: 'Franklin Gothic Medium';
+            font-size: 15px;
+        }
+        #button::after {
+            content: "";
+            z-index: 0;
+            position: relative;
+            width: 100%;
+            height: 100%;
+            background-color: #333;
+            left: 0;
+            top: 0;
+            border-radius: 10px;
+        }
+        /* Glow Effect */
+        #button::before {
+            content: "";
+            background: linear-gradient(45deg, #FF0000, #FF7300, #FFFB00, #48FF00, #00FFD5, #002BFF, #FF00C8, #FF0000);
+            position: absolute;
+            top: -2px;
+            left: -5px;
+            background-size: 600%;
+            z-index: -1;
+            width: calc(100% + 4px);
+            height: calc(100% + 4px);
+            filter: blur(0px);
+            animation: glowing 20s linear infinite;
+            transition: all 0.5s ease-in-out;
+            border-radius: 10px;
+            opacity: 0; /* Prevent from displaying colors on button */
+        }
+        @keyframes glowing {
+            0% {background-position: 0 0;}
+            50% {background-position: 500% 0;}
+            100% {background-position: 0 0;}
+        }
+        #button:hover::before {
+            opacity: 1;
+        }
+        #button:active:after {
+            background: transparent;
+        }
+        #button:active {
+            color: #000;
+            font-weight: bold;
+        }
+
+        /* Responsive Adjustments */
+        @media (max-width: 600px) {
+            h1 {
+                font-family: Verdana, sans-serif;
+                font-weight: bold;
+                font-size: 1.5rem;
+            }
+            #chatbox {
+                width: 95%;
+                max-width: none;
+                font-size: 0.9rem;
+                height: calc(100vh - 160px); /* Adjust height for mobile */
+                margin-top: 80px; /* Add margin-top to prevent overlap */
+            }
+            form {
+                width: 100%; /* Ensure form width fits screen */
+                padding: 5px; /* Reduce padding on mobile */
+            }
+            #userInput {
+                font-size: medium;
+            }
+            #button {
+                padding: 10px 10px;
+                font-size: 1rem;
+            }
+        }
+
+        /* h1 Styling */
+        #h1 {
             justify-content: center;
             display: flex;
             text-align: center;
-            font-family: verdana;
+            font-family: Verdana, sans-serif;
             font-size: 20px;
             font-weight: bold;
             position: relative;
             margin-top: 10px;
             padding: 10px;
-            width: 400px;
+            width: 90%; /* Make width responsive */
+            max-width: 400px;
             background: white;
-            text-align: center;
-            display: flex;
             border-radius: 5px;
             color: #fff;
             background-color: #000;
         }
-        @property --angle{
+        @property --angle {
             syntax: "<angle>";
             initial-value: 0deg;
             inherits: false;
         }
-        #h1::after, #h1::before{
+        #h1::after, #h1::before {
             content: '';
             position: absolute;
             height: 100%;
             width: 100%;
-            background-image: conic-gradient(from var(--angle), yellow, red,pink,aqua); /* conic-gradient(from 10deg, transparent 70%, blue           2. rgb(255, 251, 21),rgb(255, 0, 0),rgb(22, 238, 231),rgb(47, 139, 121),rgb(53, 14, 210)*/
+            background-image: conic-gradient(from var(--angle), yellow, red, pink, aqua);
             top: 50%;
             left: 50%;
             translate: -50% -50%;
@@ -195,19 +197,20 @@ form {
             border-radius: 5px;
             animation: 3s spin linear infinite;
         }
-        #h1::before{
-            filter:drop-shadow(10px);
+        #h1::before {
+            filter: drop-shadow(10px);
         }
-            @keyframes spin {
-                from{
-                    --angle: 0deg;
-                }
-                to{
-                    --angle : 360deg;
-                }
-                
+
+        @keyframes spin {
+            from {
+                --angle: 0deg;
             }
-        iframe {        
+            to {
+                --angle: 360deg;
+            }
+        }
+
+        iframe {
             position: absolute;
             top: 0;
             left: 0;
@@ -215,7 +218,7 @@ form {
             height: 100%;
             outline: none;
             border: none;
-            z-index: -1; /* Make sure it's behind the content */
+            z-index: -1; /* Ensure it's behind the content */
         }
     </style>
 </head>
