--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
             align-items: center;
             color: white;
             margin: 0;
-            padding-bottom: 60px;
+/*             padding-bottom: 60px; */
             overflow: hidden;
             position: relative;
         }
@@ -145,7 +145,7 @@
                 max-width: none;
                 font-size: 0.9rem;
                 height: calc(100vh - 160px); /* Adjust height for mobile */
-                margin-top: 80px; /* Add margin-top to prevent overlap */
+                margin-top: 20px; /* Add margin-top to prevent overlap */
             }
             form {
                 width: 100%; /* Ensure form width fits screen */
