--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <style>
         html { overflow-y: hidden; }
         body {
-            background-color: #000;
+/*             background-color: #000; */
             font-family: 'Times New Roman', Times, serif;
             display: flex;
             flex-direction: column;
@@ -17,7 +17,7 @@
             margin: 0;
 /*             padding-bottom: 60px; */
             overflow: hidden;
-            position: relative;
+/*             position: relative; */
         }
 
         #chatbox {
