--- a/templates/index.html
+++ b/templates/index.html
@@ -21,11 +21,7 @@
         <button type="submit" id="button">Send</button>
     </form>
 
-    <div id="overlay"></div>
-    <div id="customAlert">
-        <p>Developer: @BSKN<br><br>This is a project in development.<br><br>Stay tuned for exciting features!</p>
-        <button onclick="closeAlert()">OK</button>
-    </div>
+    <div id="popup" class="popup">Developer: @BSKN<br>This is a development project!</div>
     
 </body>
 </html>
